--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
     "core-js": "^3.6.5",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.7.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +24,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "hardhat": "^2.11.2"
   },
   "eslintConfig": {
     "root": true,
